--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ black==20.8b1
 click==7.1.2
 dj-database-url==0.5.0
 Django==2.2.12
+djangorestframework==3.12.2
 gunicorn==20.0.4
 mypy-extensions==0.4.3
 pathspec==0.8.1
